# model-container

./: .gdbinit  .gitignore  .mtn-ignore  Makefile.am  Makefile.in  NOTES  TODO.txt  abstract.txt  acconfig.h  aclocal.m4  algorithm.c  algorithmclass.c  algorithminstance.c  algorithmset.c  algorithmsymbol.c  analyzer.l  attachment.c  autoconf.warnings  autogen.sh  axonhillock.c  base64.c  biocomp.c  biolevel.c  bojum-install-CPAN.txt  bootstrap  cachedconnection.c  cachedcoordinate.c  cachedparameter.c  cacheregistry.c  cell.c  channel.c  concentrationgatekinetic.c  config.h.in  configure  configure.ac  configure.in  configure.scan  connection.c  connectioncache.c  connectionsymbol.c  (+98 more)
algorithms/: Makefile.am  Makefile.in  configure  configure.in
algorithms/event/: Makefile.am  Makefile.in  cerebellum.c  cerebellum.h  config.h.in  configure  configure.in  purkinjespine.c  purkinjespine.h  serialcell.c  serialcell.h  serialconnection.c  serialconnection.h  serializers.h  serialnetwork.c  serialnetwork.h  serialpopulation.c  serialpopulation.h  serialprojection.c  serialprojection.h  serialsegment.c  serialsegment.h
algorithms/symbol/: Makefile.am  Makefile.in  configure  configure.in  connectionchecker.c  connectionchecker.h  connectioncheckerinstance.c  connectioncheckerinstance.h  connectionworkerinstance.c  connectionworkerinstance.h  contextworkerinstance.c  contextworkerinstance.h  dendrogram.c  dendrogram.h  dendrograminstance.c  dendrograminstance.h  grid3d.c  grid3d.h  grid3dinstance.c  grid3dinstance.h  inserter.c  inserter.h  inserterinstance.c  inserterinstance.h  projectionrandomized.c  projectionrandomized.h  projectionrandomizedinstance.c  projectionrandomizedinstance.h  projectionvolume.c  projectionvolume.h  projectionvolumeinstance.c  projectionvolumeinstance.h  randomize.c  randomize.h  randomizeinstance.c  randomizeinstance.h  replacer.c  replacer.h  replacerinstance.c  replacerinstance.h  (+4 more)
components/: algorithmsymbol.c  attachment.c  axonhillock.c  biocomp.c  cell.c  channel.c  commentsimple.c  concentrationgatekinetic.c  connection.c  connectionsymbol.c  contourpoint.c  emcontour.c  equation.c  equationexponential.c  fiber.c  gatekinetic.c  group.c  groupedparameters.c  hhgate.c  iohier.c  iol.c  izhikevich.c  membraneleak.c  network.c  pool.c  population.c  projection.c  pulse.c  pulsegen.c  randomvalue.c  root.c  segment.c  segmenter.c  vector.c  vectorconnection.c  vectorconnectionsymbol.c  vectorcontour.c  vectorsegment.c
convertors/: 2vcg  Makefile.am  Makefile.in  configure  configure.in  contours2ndf  contours2ndf.ptkdb  des2xml.c  des2xml.pl  des2xml_comment.l  morphology2ndf  morphology2ndf.ptkdb  xml2des.xsl  xml2html.xsl
convertors/samples/: gaba.xml  mossyfiber.xml
docs/: HOWTO.outline  MACOSX.txt  features.outline  general.old  paper.outline
emacs/neurospaces-mode/: neurospaces-files.el  neurospaces-langs.el  neurospaces-mode.el  neurospaces-vars.el
glue/swig/: Makefile.am  Makefile.in  configure  configure.ac  neurospaces.i
glue/swig/perl/: Makefile.am  Makefile.in  Neurospaces.pm  configure  configure.ac  neurospaces.i
glue/swig/perl/Neurospaces/: Bindings.pm  Components.pm  Query.pm  Traversal.pm
glue/swig/perl/Neurospaces/Integrators/: Commands.pm
glue/swig/perl/Neurospaces/Tokens/: Physical.pm
glue/swig/perl/tests/: neurospaces_add_component.pm  neurospaces_alias_traversal.pm  neurospaces_delete_component.pm  neurospaces_load_command_options.pm  neurospaces_test.pm  neurospaces_test_algorithm.pm  neurospaces_test_neuromorpho.pm  neurospaces_test_traversal.pm  neurospaces_with_configuration.pm
glue/swig/python/: .gdbinit  MANIFEST  Makefile.am  Makefile.in  Neurospaces.py  __init__.py  _model_container.i  clean.py  configure  configure.ac  files.txt  model_container.i  model_container_wrap.c  neurospaces.i  nmc.i  setup.py  traversal.i  uninstall.py
glue/swig/python/Neurospaces/: SimpleHeccer.py  SimpleModelContainer.py  SingleCellContainer.py  SingleModelContainer.py  __init__.py
glue/swig/python/model_container/: __init__.py  _symbols.py  errors.py  symbols.py
glue/swig/python/model_container/loader/asc/: __init__.py  example.py
glue/swig/python/neurospaces/model_container/: __cbi__.py  __init__.py  model_container_base.py
glue/swig/python/nmc/: __cbi__.py  __init__.py  errors.py  symbols.py
glue/swig/python/tests/: neurospaces_test.py  neurospaces_test_contours.py  neurospaces_test_purkinje.py
glue/swig/python_old/: Makefile.am  neurospaces.i
glue/swig/python_old/Neurospaces/: SimpleHeccer.py
glue/swig/python_old/tests/: neurospaces_test.py  neurospaces_test_contours.py  neurospaces_test_purkinje.py
grammar/: ruler  ruler.ptkdb  symbols
hierarchy/: algorithmclasses  algorithminstances  analyzer.end  analyzer.start  instrumentor  instrumentor.ptkdb  parser.defined_types  parser.end  parser.front  parser.start  parser.start_symbol  parser.user_types  symbols  symbols.pl  symbols.yml  types_2_html  types_2_html.ptkdb
hierarchy/symbols/: base.yml  core.yml  kinetics.yml  reaction.yml  species.yml
html/cgi-bin/: c.cgi  xframes.cgi
html/htdocs/: cbi.ps  cxref-menu.html  doxygen-menu.html  history.html  index.html  info.html  neurospaces.html  technologies.html  tests-menu.html
install/deb/: changelog  control  rules
install/rpm/: model-container.spec
neurospaces/: algorithm.h  algorithmclass.h  algorithminstance.h  algorithminstance_vtable.h  algorithmset.h  algorithmsymbol.h  attachment.h  axonhillock.h  biocomp.h  biolevel.h  cachedconnection.h  cachedcoordinate.h  cachedparameter.h  cacheregistry.h  cell.h  channel.h  concentrationgatekinetic.h  config.h.in  connection.h  connectioncache.h  connectionsymbol.h  contourpoint.h  coordinatecache.h  defsym.h  dependencyfile.h  double.h  emcontour.h  equation.h  exporter.h  fiber.h  function.h  gatekinetic.h  group.h  hhgate.h  hines_list.h  hines_listlist.h  idin.h  importedfile.h  inputoutput.h  iocontainer.h  (+40 more)
tests/: command_extractor  introduction.html  neurospaces_harness  neurospaces_harness.ptkdb  test_query  tests.config  tests_2_html
(+308 files in other folders)
